Initial project setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,49 @@
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+
+*.log
+*.tmp
+*.swp
+*.swo
+*.bak
+*.pid
+*.seed
+*.cover
+
+.env
+.env.*
+
+Pipfile.lock
+
+.venv/
+venv/
+
 .idea/
+
+.mypy_cache/
+pytest_cache/
+.coverage
+htmlcov/
+.nox/
+.tox/
+.pytest_cache/
+.cache/
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+*.tar.gz
+*.zip
+
+build/
+dist/
+*.egg-info/
+*.egg
+*.whl
